--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
                         <h4 class="text-center"><span class="resultado">...</span></h4>
                     </div>
                 </div>
+
+                <div>
+                    <canvas id="indicador-chart"></canvas>
+                </div>
             </div>
         </div>
     </div>
     <script type="module" src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.7/dist/chart.umd.min.js"></script>
 </body>
 </html>
